-Correction REGEX -ajout de message d'erreur plus precis sur l'inscription

--- a/ProjetEncheres/src/main/java/fr/eni/encheres/gestionerreurs/messages_erreur.properties
+++ b/ProjetEncheres/src/main/java/fr/eni/encheres/gestionerreurs/messages_erreur.properties
@@ -5,8 +5,19 @@
 
 #ERREURS RAPPORTEES PAR LA BLL:2000...
 #=>Erreurs Repas
-20000=
-
+20001=erreur sur le pseudo.
+20002= regle erreur format.
+20003= erreur un champ est vide
+20004= erreur sur le mot de passe
+20005= erreur sur le nom
+20006= erreur sur le prenom
+20007= erreur sur le pseudo
+20008= erreur sur l'email
+20009= erreur sur le telephone
+20010= erreur sur la rue
+20011= erreur sur le code postal
+20012= erreur sur la ville
 #ERREURS RAPPORTEES PAR LES SERVLETS: 3000...
 #=>Erreurs Repas
-30000=
+30000= le mot de passe ne correspond pas
+
