AlexG- bon week end

--- a/ProjetEncheres/src/main/java/fr/eni/encheres/gestionerreurs/messages_erreur.properties
+++ b/ProjetEncheres/src/main/java/fr/eni/encheres/gestionerreurs/messages_erreur.properties
@@ -17,6 +17,7 @@
 20010= erreur sur la rue
 20011= erreur sur le code postal
 20012= erreur sur la ville
+20013 = Ce pseudo est déjà pris
 #ERREURS RAPPORTEES PAR LES SERVLETS: 3000...
 #=>Erreurs Repas
 30000= le mot de passe ne correspond pas
