--- a/ProjetEncheres/src/main/java/fr/eni/encheres/gestionerreurs/messages_erreur.properties
+++ b/ProjetEncheres/src/main/java/fr/eni/encheres/gestionerreurs/messages_erreur.properties
@@ -27,6 +27,9 @@
 20021= erreur acheteur: cet acheteur n'existe pas
 20022= erreur numero article: cette article n'existe pas
 20023= erreur date enchere: date nulle impossible
+20024= Votre solde est insuffisant pour une enchère de ce montant, Veuillez recharger votre compte pour enchérir
+20025 = Votre proposition d'enchère est en dessous de celle du précedent enchérisseur, Veuillez proposer une enchère supérieur à celle qui est proposé
+
 #ERREURS RAPPORTEES PAR LES SERVLETS: 3000...
 #=>Erreurs Repas
 30000= le mot de passe ne correspond pas
