--- a/ProjetEncheres/src/main/java/fr/eni/encheres/gestionerreurs/messages_erreur.properties
+++ b/ProjetEncheres/src/main/java/fr/eni/encheres/gestionerreurs/messages_erreur.properties
@@ -5,7 +5,7 @@
 
 #ERREURS RAPPORTEES PAR LA BLL:2000...
 #=>Erreurs Repas
-20001=erreur sur le pseudo.
+20001= erreur sur le pseudo.
 20002= regle erreur format.
 20003= erreur un champ est vide
 20004= erreur sur le mot de passe
@@ -29,6 +29,7 @@
 20023= erreur date enchere: date nulle impossible
 20024= Votre solde est insuffisant pour une enchère de ce montant, Veuillez recharger votre compte pour enchérir
 20025 = Votre proposition d'enchère est en dessous de celle du précedent enchérisseur, Veuillez proposer une enchère supérieur à celle qui est proposé
+20026 = L'enchère sur laquelle vous avez encheri est déjà fini, Veuillez selectionner une enchère en cours
 
 #ERREURS RAPPORTEES PAR LES SERVLETS: 3000...
 #=>Erreurs Repas
