AG- correctif avant presentation

--- a/ProjetEncheres/src/main/java/fr/eni/encheres/gestionerreurs/messages_erreur.properties
+++ b/ProjetEncheres/src/main/java/fr/eni/encheres/gestionerreurs/messages_erreur.properties
@@ -29,7 +29,7 @@
 20023= erreur date enchere: date nulle impossible
 20024= Votre solde est insuffisant pour une enchère de ce montant, Veuillez recharger votre compte pour enchérir
 20025 = Votre proposition d'enchère est en dessous de celle du précedent enchérisseur, Veuillez proposer une enchère supérieur à celle qui est proposé
-
+20026 = L'enchère est finie, vous ne pouvez plus enchérir
 #ERREURS RAPPORTEES PAR LES SERVLETS: 3000...
 #=>Erreurs Repas
 30000= le mot de passe ne correspond pas
